<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nav_open">Show navigation</string>
    <string name="nav_close">Hide navigation</string>
    <string name="app_name">EEGMobileClient</string>
    <string name="app_form">Form</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_pokus">Pokus</string>
    <string name="app_welcome">Welcome to EEG Base!</string>
    <string name="app_underDevelopment">This application is currently under development, so its features
        are limited and maybe bugged sometimes. Thank you for your patience and bug reporting on GitHub project site!</string>
    <string name="app_intro">This application was created in order to cover basic needs of EEG researchers.\n
        \n
        By clicking on drop-down menu in left upper corner you can select from following sections:\n
        *<b>Scenarios</b>        - Here you can look over basic scenario information and create new scenario of your own.\n
        *<b>Experiments</b>        - Section for displaying basic information about experiments and for creating a new ones.\n
        *<b>Upload file</b>        - If you need to upload a data file to your experiment, head over here.\n
        *<b>Reservations</b>        - Here you can use EEG Lab reservation system, for creating a reservation time for your research team!\n
        *<b>Settings</b>        - Gathers basic settings for this application to run properly.\n
        \n
        Hopefully you will find this application useful!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="task_progress_msg">Progress:</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="task_started_msg">Task started!</string>
    <string name="task_cancelled_msg">Task cancelled!</string>
    <string name="task_complete_msg">Task complete!</string>
    <string name="zero_percent">0%</string>
    <string name="one_hundred_percent">100%</string>
    <string name="menu_trigger_config_change">Trigger Config Change</string>
    <string name="task_running">Probíhá stahování dat ze serveru</string>
    <string name="discard">Discard</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>

    <!-- Settings activity -->
    <string name="app_settings">Login Settings</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_url">Service URL</string>
    <string name="settings_saved">Settings saved.</string>
    <string name="settings_login">Login</string>

    <!-- Form management -->
    <string name="form_section">Form</string>
    <string name="form_layout_section">Layout</string>
    <string name="form_fields_section">Fields</string>
    <string name="form_preview_section">Form preview</string>
    <string name="form_plus">Add...</string>
    <string name="form_label">Label</string>
    <string name="form_add">Add form</string>
    <string name="form_save">Save form</string>
    <string name="form_new">New Form</string>
    <string name="form_new_field">Add field</string>
    <string name="form_refresh">Download forms and layouts</string>
    <string name="form_edit_layout">Edit layout</string>
    <string name="form_save_layout">Save layout</string>
    <string name="form_create_layout">Create new layout ...</string>
    <string name="form_add_fields_to_layout">Add fields to layout ...</string>
    <string name="form_edit_layout_dialog">Edit layout ...</string>
    <string name="form_duplicate_layout">Duplicate selected layout</string>
    <string name="form_create_layout_title">Create new layout</string>
    <string name="form_move">Move fields</string>
    <string name="form_name">Form Name</string>
    <string name="form_layouts">Select Layout</string>
    <string name="form_type">Select Form Type (Database entity)</string>
    <string name="form_create_type">Create new form type ...</string>
    <string name="form_create_fields">Create fields ...</string>
    <string name="form_edit_field">Edit field</string>
    <string name="form_create_type_title">Create New Form Type</string>
    <string name="form_fields">Select field</string>
    <string name="form_list_of_fields">List Of Fields</string>
    <string name="form_previewMajor">Preview Major</string>
    <string name="form_previewMinor">Preview Minor</string>

    <!-- Field management -->
    <string name="field_label">Label</string>
    <string name="field_add">Add field</string>
    <string name="field_name">Field Name</string>
    <string name="field_type">Type</string>
    <string name="field_options">Options</string>
    <string name="field_addToLayout">Add to layout</string>
    <string name="field_createField">Create field</string>
    <string name="field_save">Save field</string>
    <string name="field_noUnusedFields">No unused fields</string>
    <string name="field_exists">The field name already exists</string>
    <string name="field_was_created">The field was created</string>
    

    <!-- person management -->
    <string name="person_add">Add person</string>
    <string name="person_name">Name</string>
    <string name="person_surname">Surname</string>
    <string name="person_birthday">Birthday</string>
    <string name="person_gender">Gender</string>
    <string name="person_mail">Email</string>
    <string name="person_notes">Notes</string>
    <string name="person_lefthand">Left-handedness</string>
    <string name="person_phone">Phone number</string>
    <string name="person_owner">Owner</string>
    <string name="person_subject">Subject</string>
    <string name="person_age">Age</string>
    <string name="mandatory">Mandatory</string>
    <string name="optional">Optionable</string>

    <!-- drawer management -->
    <string name="drawer_createNewfolder">Create New Folder</string>
    <string name="drawer_newfolder">New Folder</string>

    <color name="red">#FFFF0000</color>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="error_offline">Connection is unavailable. Request could not be completed.</string>
    <string name="error_connection">Connection to server issues occurred. Try again later.</string>
    <string name="error_date_comparison">Reservation action cannot end before it even started!</string>
    <string name="error_unknown_host">Invalid host name/address!</string>
    <string name="error_invalid_password">Password must be entered!</string>
    <string name="error_invalid_url">Entered value is not invalid URL!</string>
    <string name="error_invalid_username">Username must be an email!</string>
    <string name="error_host_unreach">Host unavailable (no route exist). Is hostname/IP correct?</string>
    <string name="error_host_timeout">Connection timeout. Try again.</string>
    <string name="error_host_con_refused">Connection refused. Are your credentials correct?</string>
    <string name="error_http_400">Application made invalid request towards server.</string>
    <string name="error_http_401">User authorization check failed. Check your login information.</string>
    <string name="error_http_403">You do not have permissions for such request.</string>
    <string name="error_http_404">Location not found. This is probably a server issue, but check your server URL just to
        be sure.</string>
    <string name="error_http_405">Request method not allowed.</string>
    <string name="error_http_408">Request timed out.</string>
    <string name="error_http_500">Internal server error.</string>
    <string name="error_http_503">Service is currently unavailable. Try again later.</string>
    <string name="error_no_file_selected">No file selected!</string>
    <string name="error_no_experiment_selected">No experiment selected!</string>
    <string name="error_no_group_selected">No research group selected!</string>
    <string name="error_invalid_mail_format">Invalid mail format!</string>
    <string name="error_invalid_date_format">Invalid date format!</string>
    
    <string name="error_ssl">SSL connection fell apart. Try again.</string>
    <string name="error_no_type_selected">No electrode type selected!</string>
    <string name="error_no_fix_selected">No electrode fix selected!</string>
    <string name="error_no_scenario_selected">No scenario selected!</string>
    <string name="error_no_subject_selected">No subject selected!</string>
    <string name="error_no_artifact_selected">No artifact selected!</string>
    <string name="error_no_digitization_selected">No digitization selected!</string>
    <string name="error_no_electrode_system_selected">No electrode system selected!</string>
    <string name="error_no_electrode_location_selected">No electrode location selected!</string>
    <string name="error_no_weather_selected">No weather selected!</string>
    <string name="error_time_start_after_end">Time of start cannot be after the end time!</string>
    
    
    <string name="error_form_type_exists">The form type already exists</string>
    <string name="error_layout_name_exists">The layout name already exists</string>
    <string name="error_empty_field">Field must be filled</string>
    <string name="error_empty_layout">Layout must be filled</string>
    <string name="error_empty_type">Form type must be filled</string>
    <string name="error_empty_form_name">Form name must be filled</string>
    <string name="error_layout_no_fields">Add fields to layout (Press "Edit layout button ...")</string>
    <string name="field_empty_name">Empty field name</string>

    <!-- Working -->
    <string name="working_ws_credentials">Verifying login information…</string>
    <string name="working_ws_layouts">Fetching available layouts…</string>

    <!-- Spinners -->
    <string name="spinner_layout">[Select layout...]</string>
    <string name="spinner_field">[Select field...]</string>

</resources>