<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center"
        android:padding="5dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name"
                android:id="@+id/person_name_label"
                android:layout_gravity="left|center_vertical"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/person_name_value"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_surname"
                android:id="@+id/person_surname_label"
                android:layout_gravity="left|center_vertical"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/person_surname_value"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_mail"
                android:id="@+id/person_mail_label"
                android:layout_gravity="left|center_vertical"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/person_mail_value"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_birthday"
                android:id="@+id/person_birthday_label"
                android:layout_gravity="left|center_vertical"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/person_birthday_value"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_gender"
                android:id="@+id/person_gender_label"
                android:layout_gravity="left|center_vertical"/>     

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_phone"
                android:id="@+id/person_phone_label"
                android:layout_gravity="left|center_vertical"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/person_phone_value"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"               
                android:id="@+id/person_notes_value"/>
    </LinearLayout>
</ScrollView>